--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         button {
             padding: 10px 20px;
             font-size: 16px;
-            background-color: var(--tg-theme-text-color);
-            color: var(--tg-theme-text-color-inverse);
+            background-color: var(--tg-theme-button-text-color);
+            color: var(--tg-theme-button-color-inverse);
             border: none;
             cursor: pointer;
             margin-top: 20px;
