--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         :root {
             --tg-theme-text-color: #0088cc;
-            --tg-theme-bg-color: #005580;
+            --tg-bg-color: #005580;
             --tg-theme-text-color-inverse: #fff;
         }
         body {
@@ -33,8 +33,8 @@
         button {
             padding: 10px 20px;
             font-size: 16px;
-            background-color: var(--tg-theme-button-text-color);
-            color: var(--tg-theme-button-color-inverse);
+            background-color: var(--tg-theme-text-color);
+            color: black;
             border: none;
             cursor: pointer;
             margin-top: 20px;
