--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
         :root {
             --tg-theme-text-color: #0088cc;
             --tg-bg-color: #005580;
-            --tg-theme-text-color-inverse: #fff;
         }
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
             text-align: center;
             color: var(--tg-theme-text-color);
-            background-color: var(--tg-theme-bg-color);
+            background-color: var(--tg-bg-color);
         }
         h1 {
             color: var(--tg-theme-text-color);
@@ -49,20 +48,7 @@
             margin-top: 20px;
         }
         button:hover {
-            background-color: var(--tg-theme-bg-color);
-        }
-        @media (prefers-color-scheme: dark) {
-            body {
-                color: var(--tg-theme-text-color-inverse);
-                background-color: var(--tg-theme-bg-color);
-            }
-            button {
-                background-color: var(--tg-theme-text-color);
-                color: var(--tg-theme-text-color-inverse);
-            }
-            button:hover {
-                background-color: var(--tg-theme-bg-color);
-            }
+            background-color: var(--tg-bg-color);
         }
     </style>
 </head>
@@ -73,9 +59,9 @@
         <button id="buy">Купить</button>
     </div>
     <form id="form">
-        <input type="text" palaceholder="Имя" id="user_name">
-        <input type="text" palaceholder="Email" id="user_email">
-        <input type="text" palaceholder="Телефон" id="user_phone">
+        <input type="text" placeholder="Имя" id="user_name">
+        <input type="text" placeholder="Email" id="user_email">
+        <input type="text" placeholder="Телефон" id="user_phone">
         <button id="order">Оформить</button>
     </form>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
