--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         :root {
             --tg-theme-text-color: #0088cc;
-            --tg-bg-color: #005580;
+            --tg-bg-color: #ffffff;
         }
         body {
             font-family: Arial, sans-serif;
@@ -15,6 +15,7 @@
             text-align: center;
             color: var(--tg-theme-text-color);
             background-color: var(--tg-bg-color);
+            margin: 0;
         }
         h1 {
             color: var(--tg-theme-text-color);
@@ -35,20 +36,20 @@
             margin: 10px 5%;
             padding: 15px 10px;
             font-size: 14px;
-            border: 2px solid silver;
+            border: 2px solid var(--tg-theme-text-color);
             border-radius: 5px;
         }
         button {
             padding: 10px 20px;
             font-size: 16px;
             background-color: var(--tg-theme-text-color);
-            color: black;
+            color: #ffffff;
             border: none;
             cursor: pointer;
             margin-top: 20px;
         }
         button:hover {
-            background-color: var(--tg-bg-color);
+            background-color: var(--tg-theme-text-color);
         }
     </style>
 </head>
