--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         let tg = window.Telegram.WebApp;
         let buy = document.getElementById("buy")
         let form = document.getElementById("form")
+        tg.expand();
 
         buy.addEventListener("click", () => {
             document.getElementById("main").style.display = "none"
